// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render summary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling Rs. 
    2.35
  </h3>
</div>
`;

exports[`should correctly render summary with multiple expense 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling Rs. 
    1,000.00
  </h3>
</div>
`;
